[package]
name = "reposcan"
version = "0.1.0"
edition = "2021"
description = "Catalog git repositories under a directory and emit per-repo state, tech stack, and metadata."
license = "MIT OR Apache-2.0"
repository = "https://github.com/misebox/reposcan"
homepage = "https://github.com/misebox/reposcan"
readme = "README.md"
keywords = ["cli", "git", "repository", "scanner", "catalog"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ignore = "0.4"
csv = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
comfy-table = "7"
once_cell = "1"
regex = "1"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
