[package]
name = "reposnap"
version = "0.2.2"
edition = "2021"
description = "Catalog git repositories under a directory and emit per-repo state, tech stack, and metadata."
license = "MIT OR Apache-2.0"
repository = "https://github.com/misebox/reposnap"
homepage = "https://github.com/misebox/reposnap"
readme = "README.md"
keywords = ["cli", "git", "repository", "scanner", "catalog"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ignore = "0.4"
csv = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
comfy-table = "7"
once_cell = "1"
regex = "1"
tokei = { version = "12", default-features = false }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
